[tool.poetry]
name = "sakila_dash"
version = "0.1.0"
description = ""
authors = ["Dom Weldon <dom.weldon@decisionlab.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
dash = "^1.9.0"
pymysql = "^0.9.3"
sqlalchemy = "^1.3.13"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
